[gd_scene load_steps=12 format=2]

[ext_resource path="res://Projectile/fire/beam/LaserBeam.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Beam.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Begin.png" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 2.5, 10 )

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 5 )

[sub_resource type="CircleShape2D" id=7]
radius = 10.3387

[node name="LaserBeam" type="Node2D"]
modulate = Color( 1, 0.141176, 0, 1 )
position = Vector2( -3, 1 )
script = ExtResource( 1 )

[node name="Begin" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="Beam" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -0.5 )
scale = Vector2( 1, 0.375 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -12 )
region_enabled = true
region_rect = Rect2( 0, 0, 100, 24 )

[node name="Area2Dbeam" type="Area2D" parent="Beam"]
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="Beam/Area2Dbeam"]
position = Vector2( 5.5, -1 )
shape = SubResource( 8 )

[node name="End" type="Position2D" parent="."]
position = Vector2( 100, 0 )

[node name="Particles2D" type="Particles2D" parent="End"]
material = SubResource( 3 )
lifetime = 0.25
preprocess = 0.25
process_material = SubResource( 6 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="End"]
collision_layer = 513
collision_mask = 513

[node name="end_point" type="CollisionShape2D" parent="End/Area2D"]
shape = SubResource( 7 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 3, -1 )
enabled = true
cast_to = Vector2( 100, 0 )

[connection signal="body_entered" from="Beam/Area2Dbeam" to="." method="_on_Area2Dbeam_body_entered"]
[connection signal="body_exited" from="Beam/Area2Dbeam" to="." method="_on_Area2Dbeam_body_exited"]
[connection signal="body_entered" from="End/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="End/Area2D" to="." method="_on_Area2D_body_exited"]
